infra/kubernetes/manifests/uploader.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-uploader
  namespace: data-ingestion
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-uploader
  template:
    metadata:
      labels:
        app: app-uploader
    spec:
      containers:
      - name: app-uploader
        image: <ECR_APP_UPLOADER_URL>:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "250m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
