infra/kubernetes/manifests/parser.service.yml
apiVersion: v1
kind: Service
metadata:
  name: app-parser-svc
  namespace: data-ingestion
spec:
  type: ClusterIP
  selector:
    app: app-parser
  ports:
    - port: 80
      targetPort: 8080
